# terminal_log_viewer

./: CMakeLists.txt  README.md  flake.nix  main.cpp  start_build.sh
.github/workflows/: build.yml
